--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,7 @@
 .presentacionuno{
     display:flex;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .contenedor{
@@ -8,6 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .footerx{
