--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,9 @@
+
+@import './reset';
 @import './index';
+@import './body';
+@import './productos';
+@import './contacto';
+@import './compra';
+@import './opiniones';
+@import './footer';
