--- a/scss/_compra.scss
+++ b/scss/_compra.scss
@@ -1,13 +1,14 @@
 .card-group {
-
+    
     margin: 30px;
+    background-color: pink;
+    
+
+    .card {
+        margin: 40px;
+        padding: 50px;
+        background-color: pink;
+    }
 
 
-.card {
-
-    margin: 40px;
-    padding: 50px;
 }
-}
-
-
