--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -12,6 +12,18 @@
     margin-bottom: 10px;
 }
 
-.footerx{
-    width: 100%;
+.instag
+    { width: 50vw;
+
+     }
+
+
+@media (max-width: 425px) {
+
+.precentacionuno img{
+    margin:2px;
+    padding:2px;
+    width: 800px;
+}
+
 }
