--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -32,7 +32,7 @@
     justify-content: center;
 
     p {
-        color:pink;
+        color:rgb(255, 126, 147);
     }
 }
 
@@ -49,8 +49,6 @@
         color: pink;
 
     }
-.footerx {
-    width:1000px;
-}
+
 
 }
