--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -17,6 +17,13 @@
 
      }
 
+    
+footer {
+    background: rgb(255, 255, 255);
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.36458333333333337) 0%, rgba(252, 67, 123, 1) 98%);
+
+
+}
 
 @media (max-width: 425px) {
 
