--- a/scss/_opiniones.scss
+++ b/scss/_opiniones.scss
@@ -43,3 +43,18 @@
 
 
 }
+
+
+@media (max-width: 425px) {
+
+.opinion1 {
+    padding: 20px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.opinion2 {
+    align-items: center;
+    flex-direction: column;
+}
+}
