--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,11 @@
 @import './compra';
 @import './opiniones';
 @import './footer';
+@import './utilities/colores';
+
+footer {
+    background: rgb(255, 255, 255);
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.36458333333333337) 0%, rgba(252, 67, 123, 1) 98%);
 
 
+}
