--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,5 @@
 @import './pages/index';
 @import './pages/opiniones';
 @import './pages/productos';
+@import './utilities/colores';
+@import './pages/nav'
