--- a/scss/main.css
+++ b/scss/main.css
@@ -1,15 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-.cartas p {
-  color: red;
-}
-
-.card-group {
-  margin: 30px;
-  background-color: pink;
+  font-family: "Parisienne", cursive;
 }
 
 .card-group .card {
@@ -18,36 +10,26 @@
   background-color: pink;
 }
 
-.catalogo {
+.catalogo-form {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 20px;
 }
-
-.catalogoimagen {
+.catalogo-form .form {
   display: flex;
-  justify-content: center;
-  margin: 40px;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  margin: 10px;
-  padding: 10px;
-}
-
-.insta {
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
+  margin-left: 40px;
+  padding: 30px;
 }
 
 .info {
   display: flex;
+  background-color: palevioletred;
   justify-content: center;
-}
-.info p {
-  color: rgb(255, 126, 147);
+  margin: 30px;
+  border: ridge pink 10px;
+  color: beige;
 }
 
 @media (max-width: 425px) {
@@ -59,14 +41,13 @@
   }
 }
 footer {
-  background-color: rgb(255, 255, 255);
-  background-color: radial-gradient(circle, rgba(255, 255, 255, 0.3645833333) 0%, rgb(252, 67, 123) 98%);
+  background: rgb(255, 255, 255);
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.3645833333) 0%, rgb(252, 67, 123) 98%);
 }
 footer .instagram {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1px;
 }
 footer .copy {
   display: flex;
@@ -76,6 +57,14 @@ footer .contenedor {
   display: flex;
 }
 
+@media (max-width: 425px) {
+  footer {
+    height: 10vh;
+  }
+  footer .img-tm {
+    width: 10px;
+  }
+}
 .presentacionuno {
   display: flex;
   justify-content: center;
@@ -92,11 +81,6 @@ footer .contenedor {
 
 .instag {
   width: 50vw;
-}
-
-footer {
-  background: rgb(255, 255, 255);
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.3645833333) 0%, rgb(252, 67, 123) 98%);
 }
 
 @media (max-width: 425px) {
@@ -146,31 +130,16 @@ footer {
     flex-direction: column;
   }
 }
+.body-bg {
+  background-color: rgba(185, 136, 152, 0.5);
+}
+
 .productos {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 30px;
 }
 .productos img:hover {
-  filter: opacity(0.5);
-}
-
-.productoss {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-}
-.productoss img:hover {
-  filter: opacity(0.5);
-}
-
-.productos3 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-}
-.productos3 img:hover {
   filter: opacity(0.5);
 }
 
@@ -193,4 +162,7 @@ footer {
     width: 200px;
     height: 300px;
   }
+}
+.navbar {
+  background-color: pink;
 }/*# sourceMappingURL=main.css.map */
