--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,40 +1,33 @@
-.catalogo {
+
+
+
+.catalogo-form {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    margin: 20px;
 
-
-.catalogoimagen {
-    display: flex;
-    justify-content: center;
-    margin: 40px;
-}
-
-
-.form {
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-    padding: 10px;
-}
-
-
-.insta {
-    display: flex;
-    justify-content: center;
-}
-
-
-.info {
-
-    display: flex;
-    justify-content: center;
-
-    p {
-        color:rgb(255, 126, 147);
+    .form {
+        display: flex;
+        flex-direction: column;
+        margin-left: 40px;
+        padding: 30px;
     }
+   
 }
+
+
+ .info{
+        display: flex;
+        background-color:palevioletred;
+        justify-content: center;
+        margin: 30px;
+        border:ridge pink 10px;
+        color:beige;
+        
+        
+    }
+
 
 
 @media (max-width: 425px) {
