--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,10 @@
 @import './pages/reset';
-@import './pages/compra';
+
 @import './pages/contacto';
 @import './pages/footer';
 @import './pages/index';
 @import './pages/opiniones';
 @import './pages/productos';
 @import './utilities/colores';
-@import './pages/nav'
+@import './pages/nav';
+
