--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -25,12 +25,10 @@ footer {
 @media (max-width: 425px) {
 
     footer {
-        height: 10vh;
-
-    .img-tm{
-        width:10px;
-    }
-
+        
+.instagram p a {
+    width:10px;
+}
     }
    
 }
