--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -43,5 +43,10 @@
 
     }
 
+    .catalogo-form {
+        display: flex;
+        margin: 20px;
+        flex-direction: column;
+        align-items: center;
 
-}
+}}
