--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,7 @@
   .productos img:hover {
     filter: opacity(0.5); }
 
-.productoss {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap; }
-  .productoss img:hover {
-    filter: opacity(0.5); }
-
-.productos3 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap; }
-  .productos3 img:hover {
-    filter: opacity(0.5); }
+ 
 
 @media (max-width: 425px) {
   .productos img {
@@ -44,16 +32,7 @@
     margin-top: 60px;
     width: 200px;
     height: 300px; }
-  .productoss img {
-    padding: 20px;
-    margin-top: 20px;
-    width: 200px;
-    height: 300px; }
-  .productos3 img {
-    padding: 20px;
-    margin-top: 20px;
-    width: 200px;
-    height: 300px; } }
+  }
 
 .catalogo {
   display: flex;
@@ -78,17 +57,13 @@
 .info {
   display: flex;
   justify-content: center; }
-  .info p {
-    color: pink; }
+
 
 @media (max-width: 425px) {
   .catalogo {
     margin-top: 40px; }
-  p {
-    color: pink; }
-  .footerx {
-    width: 1000px; } }
 
+  }
 .card-group {
   margin: 30px; }
   .card-group .card {
@@ -100,20 +75,5 @@
   flex-direction: column-reverse;
   align-items: center; }
 
-@media (max-width: 425px) {
-  .opinion1 {
-    display: flex;
-    justify-content: center; }
-  img {
-    width: 200px; }
-  .opinion1 {
-    display: flex;
-    justify-content: center; }
-  img {
-    width: 200px; }
-  .opinion2 {
-    display: flex;
-    justify-content: center; }
-  img {
-    width: 200px; } }
+
 
