--- a/scss/main.css
+++ b/scss/main.css
@@ -1,87 +1,77 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Parisienne", cursive;
 }
 
-.catalogo-form {
+.presentacionuno {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.contenedor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.instag {
+  width: 50vw;
+}
+
+@media (max-width: 425px) {
+  .precentacionuno img {
+    margin: 2px;
+    padding: 2px;
+    width: 800px;
+  }
+}
+
+
+.catalogo {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
 }
-.catalogo-form .form {
+
+.catalogoimagen {
   display: flex;
-  flex-direction: column;
-  margin-left: 40px;
-  padding: 30px;
+  justify-content: center;
+  margin: 40px;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+}
+
+.insta {
+  display: flex;
+  justify-content: center;
 }
 
 .info {
   display: flex;
-  background-color: palevioletred;
   justify-content: center;
-  margin: 30px;
-  border: ridge pink 10px;
-  color: beige;
 }
 
 @media (max-width: 425px) {
   .catalogo {
     margin-top: 40px;
   }
-  p {
-    color: pink;
-  }
-  .catalogo-form {
-    display: flex;
-    margin: 20px;
-    flex-direction: column;
-    align-items: center;
-  }
+  
 }
-footer {
-  background: rgb(255, 255, 255);
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.3645833333) 0%, rgb(252, 67, 123) 98%);
-}
-footer .instagram {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-footer .copy {
-  display: flex;
-  justify-content: center;
-}
-footer .contenedor {
-  display: flex;
-}
-
-@media (max-width: 425px) {
-  footer .instagram p a {
-    width: 10px;
-  }
-}
-/*.container img{
-    width: 100%;
-}
-
-@media (max-width: 425px) {
-
-.precentacionuno img{
-    margin:2px;
-    padding:2px;
-    width: 800px;
-}
-
-}*/
-.card {
-  display: flex;
+.card-group {
   margin: 30px;
-  padding: 20px;
+  background-color: pink;
 }
-
-.card-body {
+.card-group .card {
+  margin: 40px;
+  padding: 50px;
   background-color: pink;
 }
 
