--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,7 +1,5 @@
 footer {
-   
-    background: rgb(255, 255, 255);
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.36458333333333337) 0%, rgba(252, 67, 123, 1) 98%);
+   background-color: $purple;
 
 
     .instagram {
@@ -23,12 +21,12 @@ footer {
 }
 
 @media (max-width: 425px) {
+    
+    
+    footer{
 
-    footer {
-        
-.instagram p a {
-    width:10px;
-}
+        background-color: pink;
     }
+
    
 }
