--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,25 +1,14 @@
-/*.container img{
-    width: 100%;
-}
+
+.card-group .card {
+    margin: 40px;
+    padding: 50px;
+    background-color: pink;
+  }
 
 @media (max-width: 425px) {
 
-.precentacionuno img{
-    margin:2px;
-    padding:2px;
-    width: 800px;
+
+.card img{
+    width: 1000px;
 }
-
-}*/
-
-.card{
-    display: flex;
-    margin: 30px;
-    padding: 20px;
-}
-
-
-.card-body{
-    background-color: pink;
-  
 }
