--- a/scss/pages/_productos.scss
+++ b/scss/pages/_productos.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
-    & img:hover {
+    &img:hover {
         filter: opacity(.5);
     }
 
@@ -20,6 +20,13 @@
 @media (max-width: 425px) {
 
     .productos {
+       
         grid-template-columns: 1fr 1fr;
+        margin:10px;
     }
+
+    &img:hover {
+        filter: opacity(.5);
+    }
+
 }
