--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,14 +1,14 @@
+.logo1{
+  display: flex;
+  justify-content: center;
 
-.card-group .card {
-    margin: 40px;
-    padding: 50px;
-    background-color: pink;
-  }
+
+}
+
+
 
 @media (max-width: 425px) {
 
 
-.card img{
-    width: 1000px;
-}
-}
+
+  }
