--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,32 +1,24 @@
 footer {
-   background-color: $purple;
+    background: rgb(255,0,138);
+    background: linear-gradient(90deg, rgba(255,0,138,1) 0%, rgba(255,255,255,1) 33%, rgba(255,255,255,1) 61%, rgba(255,0,138,1) 100%);
 
 
-    .instagram {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-       
-    }
+.linea{
+    display: flex;
+    justify-content: center;
+    color:rgb(206, 161, 202);
+}
 
-    .copy {
-        display: flex;
-        justify-content: center;
-    }
-
-
-    .contenedor {
-        display: flex;
-    }
 }
 
 @media (max-width: 425px) {
     
     
-    footer{
+    footer {
 
-        background-color: pink;
+        background: rgb(255,0,138);
+background: linear-gradient(90deg, rgba(255,0,138,1) 0%, rgba(255,255,255,1) 33%, rgba(255,255,255,1) 61%, rgba(255,0,138,1) 100%);
     }
 
-   
+    
 }
