--- a/scss/pages/_productos.scss
+++ b/scss/pages/_productos.scss
@@ -1,32 +1,31 @@
-.productos {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
 
-    &img:hover {
-        filter: opacity(.5);
-    }
 
+.card-group  {
+    margin: 20px;
+    padding: 10px;
+    background-color: pink;
+  
+.card{
+  background-color: palevioletred;
+}
+
+img:hover {
+
+    filter: opacity(.5);
 }
 
 
-
-@media(max-width: 768px) {
-   
-    .productos {
-        grid-template-columns: 1fr 1fr;
-    }
 }
-
 @media (max-width: 425px) {
 
-    .productos {
-       
-        grid-template-columns: 1fr 1fr;
-        margin:10px;
+    .card-group{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
-    &img:hover {
-        filter: opacity(.5);
-    }
+img:hover {
+
+    filter: opacity(.5);
+}
 
 }
