--- a/scss/pages/_nav.scss
+++ b/scss/pages/_nav.scss
@@ -1,5 +1,4 @@
 
 .navbar{
-    background-color: $purple;
-   
-}
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(255,255,255,1) 100%);}
