--- a/scss/pages/_opiniones.scss
+++ b/scss/pages/_opiniones.scss
@@ -1,11 +1,9 @@
-
-
-
-
-
 @media (max-width: 425px) {
 
+    .carousel {
+        display: flex;
+        align-items: center;
+        height: 70vh;
+    }
 
 }
-
-
