--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,6 +1,3 @@
-
-
-
 .catalogo-form {
     display: flex;
     justify-content: center;
@@ -13,22 +10,27 @@
         margin-left: 40px;
         padding: 30px;
     }
-   
+
 }
 
 
- .info{
-        display: flex;
-        background-color:palevioletred;
-        justify-content: center;
-        margin: 30px;
-        border:ridge pink 10px;
-        color:beige;
-        
-        
-    }
+.info {
+    display: flex;
+    background-color: palevioletred;
+    justify-content: center;
+    margin: 30px;
+    color: beige;
+    border: groove;
+
+}
+
+.instagram {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
 
+}
 
 @media (max-width: 425px) {
 
@@ -37,7 +39,7 @@
         margin-top: 40px;
     }
 
-   
+
 
     .catalogo-form {
         display: flex;
@@ -45,5 +47,5 @@
         flex-direction: column;
         align-items: center;
 
-}
+    }
 }
