--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,12 @@
 @import './pages/reset';
 @import './utilities/colores';
+@import './utilities/fonts';
 @import './pages/contacto';
 @import './pages/footer';
 @import './pages/index';
 @import './pages/opiniones';
 @import './pages/productos';
-
+@import './pages/_header.scss';
 @import './pages/nav';
+
 
