--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,7 +1,6 @@
 footer {
-    background: rgb(255, 144, 204);
-    background: linear-gradient(90deg, rgba(255, 144, 204, 1) 14%, rgba(255, 255, 255, 1) 30%, rgba(255, 243, 249, 1) 74%, rgba(255, 145, 205, 1) 91%);
-
+    background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 25%, rgba(227,181,181,1) 100%);
     .linea {
         display: flex;
         justify-content: center;
@@ -14,8 +13,8 @@ footer {
 
 
     footer {
-        background: rgb(255, 144, 204);
-        background: linear-gradient(90deg, rgba(255, 144, 204, 1) 14%, rgba(255, 255, 255, 1) 30%, rgba(255, 243, 249, 1) 74%, rgba(255, 145, 205, 1) 91%);
+        background: rgb(255,255,255);
+        background: radial-gradient(circle, rgba(255,255,255,1) 25%, rgba(227,181,181,1) 100%);
     }
 
 
