--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,9 +1,31 @@
 .logo1 {
   display: flex;
   justify-content: center;
-
-
 }
+.muestra {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  img {
+      border-radius: 80px;
+  }
+
+  img:hover {
+
+      filter: opacity(.5);
+      color: rgb(151, 16, 38);
+  }
+}
+
+.titulo h2{
+  font-family: $h2-font;
+  color: palevioletred;
+  display: flex;
+  justify-content: center;
+  width: 1000px;
+  margin:30px;
+}
+
 
 
 @media (max-width: 425px) {
