--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -10,7 +10,7 @@
 
     div {
         backdrop-filter: blur(2px);
-        padding: 10px;
+        padding: 3px;
 
         h1 {
             font-family: $h1-font;
@@ -26,5 +26,14 @@
 
     }
 
+
+}
+
+@media (max-width: 425px) {
+
+    div {
+        backdrop-filter: blur(2px);
+        padding: 3px;
+    }
 
 }
