--- a/scss/pages/_productos.scss
+++ b/scss/pages/_productos.scss
@@ -1,37 +1,43 @@
-.muestra {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
 
-    img {
-        margin: 20px;
-        border: double;
-    }
 
-    img:hover {
+.card{
+    width:20rem;
+    padding: 8px;
+    border-radius: 10px;
+    display: flex;
+  
 
-        filter: opacity(.5);
-        color: rgb(151, 16, 38);
-    }
+.card img{
+    margin-bottom: 8px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
 }
+
+.card input{
+   
+    border-radius: 10px;
+    color:rgb(0, 0, 0);
+    font-size: 20px;
+    background-color: rgba(252, 144, 162, 0.938);
+    width:80px;
+    
+}}
 
 @media (max-width: 425px) {
 
-    .muestra {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .muestra img {
-
-        border: double;
-        width: 160px;
-        height: 100px;
-    }
-
+    .card{
+        width:24rem;
+        padding: 8px;
+        border-radius: 10px;
+        display: flex;
 
     img:hover {
 
         filter: opacity(.5);
     }
 
+}
 }
