--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,6 +1,7 @@
 footer {
-    background: rgb(255,255,255);
-background: radial-gradient(circle, rgba(255,255,255,1) 25%, rgba(227,181,181,1) 100%);
+    background: rgb(255, 255, 255);
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 25%, rgba(227, 181, 181, 1) 100%);
+
     .linea {
         display: flex;
         justify-content: center;
@@ -13,8 +14,8 @@ background: radial-gradient(circle, rgba(255,255,255,1) 25%, rgba(227,181,181,1)
 
 
     footer {
-        background: rgb(255,255,255);
-        background: radial-gradient(circle, rgba(255,255,255,1) 25%, rgba(227,181,181,1) 100%);
+        background: rgb(255, 255, 255);
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 25%, rgba(227, 181, 181, 1) 100%);
     }
 
 
