--- a/scss/main.css
+++ b/scss/main.css
@@ -19,19 +19,17 @@
   padding: 30px;
 }
 
-.info {
+.card-insta {
   display: flex;
-  background-color: palevioletred;
+  color: white;
+  margin: 60px;
+  padding: 30px;
   justify-content: center;
-  margin: 30px;
-  color: beige;
-  border: groove;
 }
-
-.instagram {
-  display: flex;
+.card-insta .card {
+  background-color: rgb(224, 181, 195);
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
 @media (max-width: 425px) {
@@ -70,9 +68,9 @@ footer .linea {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
-.muestra .muestra img {
-  border-radius: 80px;
+.muestra img {
   margin: 20px;
+  box-shadow: 1px 1px 2px 3px rgba(0, 0, 0, 0.63);
 }
 .muestra img:hover {
   filter: opacity(0.5);
@@ -90,7 +88,7 @@ footer .linea {
 @media (max-width: 425px) {
   .muestra img {
     width: 100px;
-    height: 200px;
+    height: 150px;
     margin: 10px;
   }
 }
@@ -110,9 +108,6 @@ footer .linea {
 .card .card img {
   margin-bottom: 8px;
   border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
 }
 .card .card input {
   border-radius: 10px;
@@ -142,11 +137,6 @@ footer .linea {
   display: flex;
   align-items: center;
 }
-.header div {
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
-  padding: 3px;
-}
 .header div h1 {
   font-family: "Sacramento", cursive;
 }
@@ -156,14 +146,15 @@ footer .linea {
   margin: 50px;
 }
 
-@media (max-width: 425px) {
-  div {
-    -webkit-backdrop-filter: blur(2px);
-            backdrop-filter: blur(2px);
-    padding: 3px;
-  }
-}
 .navbar {
   background: rgb(255, 255, 255);
   background: radial-gradient(circle, rgb(255, 255, 255) 25%, rgb(227, 181, 181) 100%);
+}
+
+.main2 {
+  background-image: url("https://images.unsplash.com/photo-1601379327928-bedfaf9da2d0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3UlQzMlQTl0ZXIlMjBkZSUyMGxhbmF8ZW58MHx8MHx8&w=1000&q=80");
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }/*# sourceMappingURL=main.css.map */
