--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,4 +1,4 @@
-.h1-opinion h1{
+.h1-nosotros h1{
     color: $purple ;
     display: flex;
     justify-content: center;
@@ -7,18 +7,8 @@
 }
 
 
+
 .carousel-control-next-icon{
     background-color: rgb(0, 0, 0) ;
     
-}
-
-
-@media (max-width: 425px) {
-
-    .carousel {
-        display: flex;
-        align-items: center;
-        height: 70vh;
-    }
-
 }
