--- a/scss/main.css
+++ b/scss/main.css
@@ -8,15 +8,18 @@
 
 .catalogo-form {
   display: flex;
-  justify-content: center;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 20px;
+  margin: 30px;
 }
 .catalogo-form .form {
   display: flex;
   flex-direction: column;
   margin-left: 40px;
   padding: 30px;
+  background-color: rgba(0, 0, 0, 0.568);
+  border-radius: 10%;
 }
 
 .card-insta {
@@ -36,7 +39,7 @@
   color: pink;
   background-color: rgba(128, 128, 128, 0.445);
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin: 30px;
   font-family: "Sacramento", cursive;
 }
@@ -46,14 +49,15 @@
     display: flex;
     justify-content: center;
   }
-  .catalogo {
-    margin-top: 40px;
-  }
   .catalogo-form {
-    display: flex;
-    margin: 20px;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .catalogo-form img {
+    width: 200px;
+  }
+  .form {
+    width: 200px;
   }
 }
 footer {
@@ -124,22 +128,37 @@ footer .linea {
     height: 70vh;
   }
 }
-.card {
-  width: 20rem;
-  padding: 8px;
-  border-radius: 10px;
+.card-group {
   display: flex;
 }
-.card .card img {
-  margin-bottom: 8px;
+.card-group .card {
+  display: flex;
+  align-items: center;
+}
+.card-group .card-body {
+  background-color: pink;
+  width: 420px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  box-shadow: 1px 2px 2px 2px black;
+}
+.card-group .card img {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 400px;
   border-radius: 10px;
 }
-.card .card input {
-  border-radius: 10px;
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  background-color: rgba(252, 144, 162, 0.938);
-  width: 80px;
+.card-group .card img:hover {
+  filter: opacity(0.5);
+}
+.card-group .card-title {
+  display: flex;
+  justify-content: center;
+}
+.card-group input {
+  background-color: rgb(255, 139, 145);
+  color: white;
 }
 
 .h1-productos h1 {
@@ -151,14 +170,9 @@ footer .linea {
 }
 
 @media (max-width: 425px) {
-  .card {
-    width: 24rem;
-    padding: 8px;
-    border-radius: 10px;
+  .card-group {
     display: flex;
-  }
-  .card img:hover {
-    filter: opacity(0.5);
+    flex-direction: column;
   }
 }
 .header {
@@ -196,7 +210,7 @@ footer .linea {
   color: pink;
   display: flex;
   justify-content: center;
-  margin: 30px;
+  margin: 20px;
   font-family: "Sacramento", cursive;
 }
 
