--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,17 +1,23 @@
 .catalogo-form {
     display: flex;
-    justify-content: center;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 20px;
+    margin: 30px;
+
 
     .form {
         display: flex;
         flex-direction: column;
         margin-left: 40px;
         padding: 30px;
+        background-color: rgba(0, 0, 0, 0.568);
+        border-radius: 10%;
+
     }
 
 }
+
 
 .card-insta {
     display: flex;
@@ -28,32 +34,34 @@
     }
 }
 
-.h1-contacto h1{
+.h1-contacto h1 {
     color: $purple ;
     background-color: rgba(128, 128, 128, 0.445);
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 30px;
     font-family: $h1-font ;
 }
 
 @media (max-width: 425px) {
 
-    .h1-contacto h1{
+    .h1-contacto h1 {
         display: flex;
         justify-content: center;
     }
 
-    .catalogo {
-        margin-top: 40px;
+    .catalogo-form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
     }
 
+    .catalogo-form img {
+        width: 200px;
 
-    .catalogo-form {
-        display: flex;
-        margin: 20px;
-        flex-direction: column;
-        align-items: center;
+    }
 
+    .form {
+        width: 200px;
     }
 }
