--- a/scss/pages/_productos.scss
+++ b/scss/pages/_productos.scss
@@ -1,27 +1,48 @@
-.card {
-    width: 20rem;
-    padding: 8px;
-    border-radius: 10px;
+.card-group {
+
     display: flex;
 
+    .card {
+        display: flex;
+        align-items: center;
+    }
+
+    .card-body {
+        background-color: $purple;
+        width: 420px;
+        border-radius: 20px;
+        margin-bottom: 10px;
+        box-shadow: 1px 2px 2px 2px black;
+    }
+
     .card img {
-        margin-bottom: 8px;
+        display: flex;
+        align-items: center;
+        width: 300px;
+        height: 400px;
         border-radius: 10px;
+    }
+
+    .card img:hover {
+
+        filter: opacity(.5);
+    }
+
+    .card-title {
+        display: flex;
+        justify-content: center;
 
     }
 
-    .card input {
-
-        border-radius: 10px;
-        color: rgb(0, 0, 0);
-        font-size: 20px;
-        background-color: rgba(252, 144, 162, 0.938);
-        width: 80px;
+    input {
+        background-color: rgb(255, 139, 145);
+        color: white;
 
     }
+
 }
 
-.h1-productos h1{
+.h1-productos h1 {
     color: $purple ;
     display: flex;
     justify-content: center;
@@ -31,16 +52,9 @@
 
 @media (max-width: 425px) {
 
-    .card {
-        width: 24rem;
-        padding: 8px;
-        border-radius: 10px;
+    .card-group {
         display: flex;
-
-        img:hover {
-
-            filter: opacity(.5);
-        }
-
+        flex-direction: column;
     }
+
 }
