--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -2,11 +2,18 @@
     color: $purple ;
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 5px;
     font-family: $h1-font ;
 }
 
 .carousel-control-next-icon {
     background-color: rgb(0, 0, 0);
 
+}
+
+@media (max-width: 425px) {
+
+    .h1-nosotros h1 {
+        margin: 2px;
+    }
 }
