--- a/scss/pages/_productos.scss
+++ b/scss/pages/_productos.scss
@@ -9,7 +9,7 @@
 
     .card-body {
         background-color: $purple;
-        width: 420px;
+        width: 350px;
         border-radius: 20px;
         margin-bottom: 10px;
         box-shadow: 1px 2px 2px 2px black;
@@ -37,6 +37,9 @@
     input {
         background-color: rgb(255, 139, 145);
         color: white;
+        display: flex;
+        align-items: center;
+       
 
     }
 
@@ -56,5 +59,15 @@
         display: flex;
         flex-direction: column;
     }
+
+    .card-body {
+       
+        width: 300px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        box-shadow: 1px 2px 2px 2px black;
+    }
+
+
 
 }
